# exercises

./: README.md
OpenGL/00_point/: CMakeLists.txt
OpenGL/00_point/src/: main.cpp
OpenGL/01_triangle/src/: main.cpp
OpenGL/02_test/: CMakeLists.txt
OpenGL/02_test/src/: main.cpp
OpenGL/03_matrices/: CMakeLists.txt
OpenGL/03_matrices/src/: main.cpp
OpenGL/04/: CMakeLists.txt
OpenGL/04/src/: main.cpp
OpenGL/05/: CMakeLists.txt
OpenGL/05/src/: main.cpp
OpenGL/06-3D/: CMakeLists.txt
OpenGL/07/: CMakeLists.txt
OpenGL/07/src/: main.cpp
OpenGL/test/: CMakeLists.txt
OpenGL/test/src/: main.cpp
c++/: 001_hello.cpp  CMakeLists.txt
c++/000_HelloWorld/: 000_HelloWorld.sln
c++/000_HelloWorld/000_HelloWorld/: 000_HelloWorld.vcxproj  HelloWorld.cpp
c++/000_HelloWorld/000_HelloWorld/x64/Debug/: 000_HelloWorld.exe.recipe  000_HelloWorld.ilk  vc143.idb
c++/000_HelloWorld/000_HelloWorld/x64/Debug/000_HelloWorld.tlog/: 000_HelloWorld.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
